Update GitHub workflows to include Bicep compiler and GMCopilot tests

--- a/.github/workflows/build-armtemplates.yml
+++ b/.github/workflows/build-armtemplates.yml
@@ -3,6 +3,9 @@ name: build-armtemplates
 on:
   workflow_call:
 
+# We are building an ARM template rather than submitting the Bicep directly
+# because this allows us to use the latest version of the Bicep compiler.
+
 jobs:
   build-armtemplates:
     name: Build ARM Templates from Bicep
