--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -10,11 +10,8 @@ permissions:
   pull-requests: write
 
 jobs:
-  # We are building an ARM template rather than submitting the Bicep directly
-  # because this allows us to use the latest version of the Bicep compiler.
-
-  build-armtemplates:
-    uses: ./.github/workflows/build-armtemplates.yml
+  set-build-variables:
+    uses: ./.github/workflows/set-build-variables.yml
 
   test-gmcopilot:
     uses: ./.github/workflows/test-gmcopilot.yml
@@ -24,3 +21,5 @@ jobs:
       - test-gmcopilot
     uses: ./.github/workflows/build-gmcopilot.yml
     
+  build-armtemplates:
+    uses: ./.github/workflows/build-armtemplates.yml
