--- a/.github/workflows/continuous-deployment.yml
+++ b/.github/workflows/continuous-deployment.yml
@@ -78,7 +78,7 @@ jobs:
   validate-application-infrastructure-test:
     needs:
       - set-build-variables
-      - build-armtemplates
+      - build-gmcopilot-container
     uses: ./.github/workflows/validate-application-infrastructure.yml
     with:
       ENVIRONMENT: Test
