Update publish-gmcopilot.yml with environment variable

--- a/.github/workflows/publish-gmcopilot.yml
+++ b/.github/workflows/publish-gmcopilot.yml
@@ -20,7 +20,8 @@ on:
 
 jobs:
   publish-gmcopilot:
-    name: Publish GM Copilot
+    name: Publish GM Copilot ${{ inputs.ENVIRONMENT }}
+    environment: ${{ inputs.ENVIRONMENT }}
     runs-on: ubuntu-latest
 
     steps:
