--- a/.github/workflows/validate-application-infrastructure.yml
+++ b/.github/workflows/validate-application-infrastructure.yml
@@ -23,6 +23,10 @@ on:
         description: "The Azure AD instance to use for authentication"
         required: true
         type: string
+      RESOURCE_GROUP_NAME_SHARED:
+        description: "The name of the resource group that the shared resources are in"
+        required: true
+        type: string
     secrets:
       AZURE_TENANT_ID:
         description: "The Azure tenant ID to use for authentication to Azure for deployment"
@@ -75,6 +79,7 @@ jobs:
             location=${{ inputs.LOCATION }}
             baseResourceName=${{ vars.BASE_RESOURCE_NAME }}
             resourceGroupName=${{ vars.RESOURCE_GROUP_NAME }}
+            sharedResourceGroupName=${{ inputs.RESOURCE_GROUP_NAME_SHARED }}
             appServicePlanConfiguration=${{ inputs.APPSERVICEPLAN_CONFIGURATION }}
             azureAdInstance=${{ inputs.AZUREAD_INSTANCE }}
             azureAdDomain=${{ secrets.AZUREAD_DOMAIN }}
