--- a/.github/workflows/validate-application-infrastructure.yml
+++ b/.github/workflows/validate-application-infrastructure.yml
@@ -80,6 +80,7 @@ jobs:
             baseResourceName=${{ vars.BASE_RESOURCE_NAME }}
             resourceGroupName=${{ vars.RESOURCE_GROUP_NAME }}
             sharedResourceGroupName=${{ inputs.RESOURCE_GROUP_NAME_SHARED }}
+            buildVersion=${{ inputs.BUILD_VERSION }}
             appServicePlanConfiguration=${{ inputs.APPSERVICEPLAN_CONFIGURATION }}
             azureAdInstance=${{ inputs.AZUREAD_INSTANCE }}
             azureAdDomain=${{ secrets.AZUREAD_DOMAIN }}
