Add BASE_RESOURCE_NAME_SHARED variable to continuous-deployment.yml

--- a/.github/workflows/continuous-deployment.yml
+++ b/.github/workflows/continuous-deployment.yml
@@ -87,6 +87,7 @@ jobs:
       APPSERVICEPLAN_CONFIGURATION: ${{ vars.APPSERVICEPLAN_CONFIGURATION }}
       AZUREAD_INSTANCE: ${{ vars.AZUREAD_INSTANCE }}
       RESOURCE_GROUP_NAME_SHARED: ${{ vars.RESOURCE_GROUP_NAME_SHARED }}
+      BASE_RESOURCE_NAME_SHARED: ${{ vars.BASE_RESOURCE_NAME_SHARED }}
     secrets:
       AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
       AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
@@ -108,6 +109,7 @@ jobs:
       APPSERVICEPLAN_CONFIGURATION: ${{ vars.APPSERVICEPLAN_CONFIGURATION }}
       AZUREAD_INSTANCE: ${{ vars.AZUREAD_INSTANCE }}
       RESOURCE_GROUP_NAME_SHARED: ${{ vars.RESOURCE_GROUP_NAME_SHARED }}
+      BASE_RESOURCE_NAME_SHARED: ${{ vars.BASE_RESOURCE_NAME_SHARED }}
     secrets:
       AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
       AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
