--- a/.github/workflows/deploy-application-infrastructure.yml
+++ b/.github/workflows/deploy-application-infrastructure.yml
@@ -78,10 +78,7 @@ jobs:
     environment: ${{ inputs.ENVIRONMENT }}
     runs-on: ubuntu-latest
     outputs:
-      webAppName: ${{ steps.deploy.outputs.webAppName }}
-      webAppHostName: ${{ steps.deploy.outputs.webAppHostName }}
-      webAppStagingName: ${{ steps.deploy.outputs.webAppStagingName }}
-      webAppStagingHostName: ${{ steps.deploy.outputs.webAppStagingHostName }}
+      applicationUrl: ${{ steps.deploy.outputs.applicationUrl }}
       openAiServiceEndpoint: ${{ steps.deploy.outputs.openAiServiceEndpoint }}
 
     steps:
