Update authentication to use Entra ID instead of Azure AD

--- a/.github/workflows/continuous-deployment.yml
+++ b/.github/workflows/continuous-deployment.yml
@@ -80,18 +80,16 @@ jobs:
       ENVIRONMENT: Test
       BUILD_VERSION: ${{ needs.set-build-variables.outputs.BUILD_VERSION }}
       LOCATION: ${{ vars.LOCATION }}
-      APPSERVICEPLAN_CONFIGURATION: ${{ vars.APPSERVICEPLAN_CONFIGURATION }}
-      AZUREAD_INSTANCE: ${{ vars.AZUREAD_INSTANCE }}
+      ENTRAID_ISSUER_URL: ${{ vars.ENTRAID_ISSUER_URL }}
+      ENTRAID_TENANT_ID: ${{ vars.ENTRAID_TENANT_ID }}
+      ENTRAID_CLIENT_ID: ${{ vars.ENTRAID_CLIENT_ID }}
       RESOURCE_GROUP_NAME_SHARED: ${{ vars.RESOURCE_GROUP_NAME_SHARED }}
       BASE_RESOURCE_NAME_SHARED: ${{ vars.BASE_RESOURCE_NAME_SHARED }}
     secrets:
       AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
       AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
       AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
-      AZUREAD_DOMAIN: ${{ secrets.AZUREAD_DOMAIN }}
-      AZUREAD_TENANT_ID: ${{ secrets.AZUREAD_TENANT_ID }}
-      AZUREAD_CLIENT_ID: ${{ secrets.AZUREAD_CLIENT_ID }}
-      AZUREAD_CLIENTSECRET: ${{ secrets.AZUREAD_CLIENTSECRET }}
+      ENTRAID_CLIENT_SECRET: ${{ secrets.AZUREAD_CLIENT_SECRET }}
   
   deploy-application-infrastructure-test:
     needs:
@@ -102,15 +100,13 @@ jobs:
       ENVIRONMENT: Test
       BUILD_VERSION: ${{ needs.set-build-variables.outputs.BUILD_VERSION }}
       LOCATION: ${{ vars.LOCATION }}
-      APPSERVICEPLAN_CONFIGURATION: ${{ vars.APPSERVICEPLAN_CONFIGURATION }}
-      AZUREAD_INSTANCE: ${{ vars.AZUREAD_INSTANCE }}
+      ENTRAID_ISSUER_URL: ${{ vars.ENTRAID_ISSUER_URL }}
+      ENTRAID_TENANT_ID: ${{ vars.ENTRAID_TENANT_ID }}
+      ENTRAID_CLIENT_ID: ${{ vars.ENTRAID_CLIENT_ID }}
       RESOURCE_GROUP_NAME_SHARED: ${{ vars.RESOURCE_GROUP_NAME_SHARED }}
       BASE_RESOURCE_NAME_SHARED: ${{ vars.BASE_RESOURCE_NAME_SHARED }}
     secrets:
       AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
       AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
       AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
-      AZUREAD_DOMAIN: ${{ secrets.AZUREAD_DOMAIN }}
-      AZUREAD_TENANT_ID: ${{ secrets.AZUREAD_TENANT_ID }}
-      AZUREAD_CLIENT_ID: ${{ secrets.AZUREAD_CLIENT_ID }}
-      AZUREAD_CLIENTSECRET: ${{ secrets.AZUREAD_CLIENTSECRET }}
+      ENTRAID_CLIENT_SECRET: ${{ secrets.ENTRAID_CLIENT_SECRET }}
