--- a/.github/workflows/deploy-application-infrastructure.yml
+++ b/.github/workflows/deploy-application-infrastructure.yml
@@ -4,25 +4,17 @@ on:
   workflow_call:
     inputs:
       ENVIRONMENT:
-        description: "The environment to deploy the application infrastructure for"
+        description: "The environment to validate the application infrastructure for"
         required: true
         type: string
       BUILD_VERSION:
-        description: "The version of the build to deploy to the infrastructure"
+        description: "The version of the build to deploy to the application resources"
         required: true
         type: string
       LOCATION:
-        description: "The Azure region to deploy the infrastructure to"
+        description: "The Azure region to deploy the application resources to"
         required: true
-        type: string
-      APPSERVICEPLAN_CONFIGURATION:
-        description: "The configuration of the app service plan to deploy the web app to"
-        required: true
-        type: string
-      AZUREAD_INSTANCE:
-        description: "The Azure AD instance to use for authentication"
-        required: true
-        type: string
+        type: string          
       RESOURCE_GROUP_NAME_SHARED:
         description: "The name of the resource group that the shared resources are in"
         required: true
@@ -31,7 +23,19 @@ on:
         description: "The base name of the shared resources"
         required: true
         type: string
-
+      ENTRAID_ISSUER_URL:
+        description: "The Entra ID Issuer URL to use for authentication"
+        required: true
+        type: string
+      ENTRAID_TENANT_ID:
+        description: "The tenant ID of the Entra ID tenant to use for application authentication"
+        required: true
+        type: string
+      ENTRAID_CLIENT_ID:
+        description: "The client ID to use to connect to the Entra ID to perform application authentication"
+        required: true
+        type: string
+          
     secrets:
       AZURE_TENANT_ID:
         description: "The Azure tenant ID to use for authentication to Azure for deployment"
@@ -42,32 +46,14 @@ on:
       AZURE_CLIENT_ID:
         description: "The Azure client ID to use for authentication to Azure for deployment"
         required: true
-      AZUREAD_DOMAIN:
-        description: "The domain name of the Azure AD tenant to use for application authentication"
-        required: true
-      AZUREAD_TENANT_ID:
-        description: "The tenant ID of the Azure AD tenant to use for application authentication"
-        required: true
-      AZUREAD_CLIENT_ID:
-        description: "The client ID to use to connect to the Azure AD to perform application authentication"
-        required: true
-      AZUREAD_CLIENTSECRET:
-        description: "The client secret to use to connect to the Azure AD to perform application authentication"
+      ENTRAID_CLIENT_SECRET:
+        description: "The client secret to use to connect to the Entra ID to perform application authentication"
         required: true
   
     outputs:
-      webAppName:
-        description: "The name of the deployed web app"
-        value: ${{ jobs.deploy-application-infrastructure.outputs.webAppName }}
-      webAppHostName:
-        description: "The hostname of the deployed web app"
-        value: ${{ jobs.deploy-application-infrastructure.outputs.webAppHostName }}
-      webAppStagingName:
-        description: "The name of the deployed web app staging slot"
-        value: ${{ jobs.deploy-application-infrastructure.outputs.webAppStagingName }}
-      webAppStagingHostName:
-        description: "The hostname of the deployed web app staging slot"
-        value: ${{ jobs.deploy-application-infrastructure.outputs.webAppStagingHostName }}
+      applicationUrl:
+        description: "The endpoint of the deployed application"
+        value: ${{ jobs.deploy-application-infrastructure.outputs.applicationUrl }}
       openAiServiceEndpoint:
         description: "The endpoint of the deployed OpenAI service"
         value: ${{ jobs.deploy-application-infrastructure.outputs.openAiServiceEndpoint }}
@@ -110,8 +96,7 @@ jobs:
             resourceGroupNameShared=${{ inputs.RESOURCE_GROUP_NAME_SHARED }}
             baseResourceNameShared=${{ inputs.BASE_RESOURCE_NAME_SHARED }}
             buildVersion=${{ inputs.BUILD_VERSION }}
-            azureAdInstance=${{ inputs.AZUREAD_INSTANCE }}
-            azureAdDomain=${{ secrets.AZUREAD_DOMAIN }}
-            azureAdTenantId=${{ secrets.AZUREAD_TENANT_ID }}
-            azureAdClientId=${{ secrets.AZUREAD_CLIENT_ID }}
-            azureAdClientSecret=${{ secrets.AZUREAD_CLIENTSECRET }}
+            entraIdIssuerUrl=${{ inputs.ENTRAID_ISSUER_URL }}
+            entraIdTenantId=${{ inputs.ENTRAID_TENANT_ID }}
+            entraIdClientId=${{ inputs.ENTRAID_CLIENT_ID }}
+            entraIdClientSecret=${{ secrets.ENTRAID_CLIENTSECRET }}
