--- a/src/GMCopilot/GMCopilot/GMCopilot/appsettings.json
+++ b/src/GMCopilot/GMCopilot/GMCopilot/appsettings.json
@@ -5,11 +5,5 @@
             "Microsoft.AspNetCore": "Warning"
         }
     },
-    "AllowedHosts": "*",
-    "DataStore": {
-        "Type": "CosmosDb",
-        "CosmosDb": {
-            "EndpointUri": "https://dsr-gmcopilot-cdb.documents.azure.com:443/"
-        }
-    }
+    "AllowedHosts": "*"
 }
