Add environmentCode parameter to deployment workflows and containerApp module

--- a/.github/workflows/deploy-application-infrastructure.yml
+++ b/.github/workflows/deploy-application-infrastructure.yml
@@ -91,6 +91,7 @@ jobs:
           scope: subscription
           parameters: >
             location=${{ inputs.LOCATION }}
+            environmentCode=${{ inputs.ENVIRONMENT }}
             baseResourceName=${{ vars.BASE_RESOURCE_NAME }}
             resourceGroupName=${{ vars.RESOURCE_GROUP_NAME }}
             resourceGroupNameShared=${{ inputs.RESOURCE_GROUP_NAME_SHARED }}
