--- a/src/GMCopilot/GMCopilot.Core.Test/GMCopilot.Core.Test.csproj
+++ b/src/GMCopilot/GMCopilot.Core.Test/GMCopilot.Core.Test.csproj
@@ -21,7 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\GMCopilot.Entities\GMCopilot.Entities.csproj" />
+    <ProjectReference Include="..\GMCopilot.Core\GMCopilot.Core.csproj" />
   </ItemGroup>
 
 </Project>
