--- a/src/GMCopilot/GMCopilot.Data/GMCopilot.Data.csproj
+++ b/src/GMCopilot/GMCopilot.Data/GMCopilot.Data.csproj
@@ -12,7 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\GMCopilot.Entities\GMCopilot.Entities.csproj" />
+    <ProjectReference Include="..\GMCopilot.Core\GMCopilot.Core.csproj" />
   </ItemGroup>
 
 </Project>
