The most significant changes involve renaming of a namespace and a class in the `ServiceExtensions.cs` and `Program.cs` files. The namespace `GMCopilot.Backend.Extensions` has been renamed to `GMCopilot.Extensions`, and the class `BackendServiceExtensions` has been renamed to `ServiceExtensions`.
List of changes:

1. The namespace `GMCopilot.Backend.Extensions` has been renamed to `GMCopilot.Extensions` in the `ServiceExtensions.cs` and `Program.cs` files. This change is important as it affects the way the code is organized and accessed. It may also impact other parts of the code that reference this namespace.

2. The class `BackendServiceExtensions` in the `ServiceExtensions.cs` file has been renamed to `ServiceExtensions`. This change simplifies the class name and makes it more consistent with the file name. It may also affect other parts of the code that reference this class.

--- a/src/GMCopilot/GMCopilot/GMCopilot/appsettings.json
+++ b/src/GMCopilot/GMCopilot/GMCopilot/appsettings.json
@@ -1,4 +1,12 @@
 {
+    "AzureAd": {
+        "Authority": "https://gmcopilot.ciamlogin.com/gmcopilot.onmicrosoft.com",
+        "ClientId": "e56042c1-9dbc-45b0-8ec4-2b08063c1f16",
+        "ClientSecret": "Client secret from app-registration. Check user secrets/azure portal.",
+        "ClientCertificates": [],
+        "CallbackPath": "/signin-oidc",
+        "Scopes": "access_as_user"
+    },
     "Logging": {
         "LogLevel": {
             "Default": "Information",
