--- a/.github/workflows/build-app-containers.yml
+++ b/.github/workflows/build-app-containers.yml
@@ -42,5 +42,8 @@ jobs:
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
           client-id: ${{ secrets.AZURE_CLIENT_ID }}
 
-      - name: Build and push image web app container to ACR      
+      - name: Build and push web app container image to ACR      
         run: az acr build --image gmcopilot/gmcopilot:${{ inputs.BUILD_VERSION }} --registry ${{ inputs.CONTAINER_REGISTRY_NAME }} -g ${{ inputs.RESOURCE_GROUP_NAME }} --target final -f ./src/GMCopilot/GMCopilot/GMCopilot/Dockerfile .
+
+      - name: Build and push access API container image to ACR      
+        run: az acr build --image gmcopilot/gmcopilot.accessapi:${{ inputs.BUILD_VERSION }} --registry ${{ inputs.CONTAINER_REGISTRY_NAME }} -g ${{ inputs.RESOURCE_GROUP_NAME }} --target final -f ./src/GMCopilot/GMCopilot.AccessApi/Dockerfile .
