--- a/src/GMCopilot/GMCopilot.AppHost/GMCopilot.AppHost.csproj
+++ b/src/GMCopilot/GMCopilot.AppHost/GMCopilot.AppHost.csproj
@@ -11,9 +11,11 @@
 
   <ItemGroup>
     <PackageReference Include="Aspire.Hosting" Version="8.0.0-preview.1.23557.2" />
+    <PackageReference Include="Aspire.Microsoft.Azure.Cosmos" Version="8.0.0-preview.1.23557.2" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\GMCopilot.AccessApi\GMCopilot.AccessApi.csproj" />
     <ProjectReference Include="..\GMCopilot\GMCopilot\GMCopilot.csproj" />
   </ItemGroup>
 
