Fix Dockerfile path in dotnet restore command

--- a/src/GMCopilot/GMCopilot.AccessApi/Dockerfile
+++ b/src/GMCopilot/GMCopilot.AccessApi/Dockerfile
@@ -12,7 +12,7 @@ WORKDIR /src
 COPY ["src/GMCopilot/GMCopilot.AccessApi/GMCopilot.AccessApi.csproj", "GMCopilot.AccessApi/"]
 COPY ["src/GMCopilot/GMCopilot.Core/GMCopilot.Core.csproj", "GMCopilot.Core/"]
 COPY ["src/GMCopilot/GMCopilot.ServiceDefaults/GMCopilot.ServiceDefaults.csproj", "GMCopilot.ServiceDefaults/"]
-RUN dotnet restore "./GMCopilot/GMCopilot.AccessApi/GMCopilot.AccessApi.csproj"
+RUN dotnet restore "./GMCopilot.AccessApi/GMCopilot.AccessApi.csproj"
 COPY src/ .
 RUN dotnet build "./GMCopilot.AccessApi/GMCopilot.AccessApi.csproj" -c $BUILD_CONFIGURATION -o /app/build
 RUN dir
