Work on getting identity working with CIAM

--- a/.github/workflows/continuous-deployment.yml
+++ b/.github/workflows/continuous-deployment.yml
@@ -82,7 +82,10 @@ jobs:
       LOCATION: ${{ vars.LOCATION }}
       ENTRAID_ISSUER_URL: ${{ vars.ENTRAID_ISSUER_URL }}
       ENTRAID_TENANT_ID: ${{ vars.ENTRAID_TENANT_ID }}
-      ENTRAID_CLIENT_ID: ${{ vars.ENTRAID_CLIENT_ID }}
+      ENTRAID_DOMAIN: ${{ vars.ENTRAID_DOMAIN }}
+      ENTRAID_CLIENT_ID_APP: ${{ vars.ENTRAID_CLIENT_ID_APP }}
+      ENTRAID_CLIENT_ID_CLIENT: ${{ vars.ENTRAID_CLIENT_ID_CLIENT }}
+      ENTRAID_CLIENT_ID_API: ${{ vars.ENTRAID_CLIENT_ID_API }}
       RESOURCE_GROUP_NAME_SHARED: ${{ vars.RESOURCE_GROUP_NAME_SHARED }}
       BASE_RESOURCE_NAME_SHARED: ${{ vars.BASE_RESOURCE_NAME_SHARED }}
     secrets:
@@ -102,11 +105,13 @@ jobs:
       LOCATION: ${{ vars.LOCATION }}
       ENTRAID_ISSUER_URL: ${{ vars.ENTRAID_ISSUER_URL }}
       ENTRAID_TENANT_ID: ${{ vars.ENTRAID_TENANT_ID }}
-      ENTRAID_CLIENT_ID: ${{ vars.ENTRAID_CLIENT_ID }}
+      ENTRAID_DOMAIN: ${{ vars.ENTRAID_DOMAIN }}
+      ENTRAID_CLIENT_ID_APP: ${{ vars.ENTRAID_CLIENT_ID_APP }}
+      ENTRAID_CLIENT_ID_CLIENT: ${{ vars.ENTRAID_CLIENT_ID_CLIENT }}
+      ENTRAID_CLIENT_ID_API: ${{ vars.ENTRAID_CLIENT_ID_API }}
       RESOURCE_GROUP_NAME_SHARED: ${{ vars.RESOURCE_GROUP_NAME_SHARED }}
       BASE_RESOURCE_NAME_SHARED: ${{ vars.BASE_RESOURCE_NAME_SHARED }}
     secrets:
       AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
       AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
       AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
-      ENTRAID_CLIENT_SECRET: ${{ secrets.ENTRAID_CLIENT_SECRET }}
