--- a/src/GMCopilot/GMCopilot/GMCopilot.Client/GMCopilot.Client.csproj
+++ b/src/GMCopilot/GMCopilot/GMCopilot.Client/GMCopilot.Client.csproj
@@ -6,10 +6,15 @@
     <Nullable>enable</Nullable>
     <NoDefaultLaunchSettingsFile>true</NoDefaultLaunchSettingsFile>
     <StaticWebAssetProjectMode>Default</StaticWebAssetProjectMode>
+    <UserSecretsId>cbac0a34-079f-42d0-a6aa-45fb5ba5424e</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Authentication.WebAssembly.Msal" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Graph" Version="5.36.0" />
     <PackageReference Include="MudBlazor" Version="6.11.1" />
   </ItemGroup>
 
