--- a/src/GMCopilot/GMCopilot/GMCopilot/appsettings.json
+++ b/src/GMCopilot/GMCopilot/GMCopilot/appsettings.json
@@ -1,17 +1,17 @@
 {
-    "AzureAd": {
-        "Authority": "https://gmcopilot.ciamlogin.com/gmcopilot.onmicrosoft.com",
-        "ClientId": "e56042c1-9dbc-45b0-8ec4-2b08063c1f16",
-        "ClientSecret": "Client secret from app-registration. Check user secrets/azure portal.",
-        "ClientCertificates": [],
-        "CallbackPath": "/signin-oidc",
-        "Scopes": "access_as_user"
-    },
     "Logging": {
         "LogLevel": {
             "Default": "Information",
             "Microsoft.AspNetCore": "Warning"
         }
     },
-    "AllowedHosts": "*"
+    "AllowedHosts": "*",
+    "EntraId": {
+        "Instance": "https://gmcopilot.ciamlogin.com/",
+        "Domain": "gmcopilot.onmicrosoft.com",
+        "TenantId": "07f7ba6e-6d72-412c-a589-9b73d6620bb3",
+        "ClientId": "3295fd92-9af0-4722-9b7f-f93917b49b9a",
+        "CallbackPath": "/signin-oidc",
+        "Scopes": "api_access"
+    }
 }
