--- a/.github/workflows/validate-application-infrastructure.yml
+++ b/.github/workflows/validate-application-infrastructure.yml
@@ -31,8 +31,20 @@ on:
         description: "The tenant ID of the Entra ID tenant to use for application authentication"
         required: true
         type: string
-      ENTRAID_CLIENT_ID:
-        description: "The client ID to use to connect to the Entra ID to perform application authentication"
+      ENTRAID_DOMAIN:
+        description: "The domain name of the Entra ID tenant"
+        required: true
+        type: string
+      ENTRAID_CLIENT_ID_APP:
+        description: "The client ID that the app will used to connect to the Entra ID to perform application authentication"
+        required: true
+        type: string
+      ENTRAID_CLIENT_ID_CLIENT:
+        description: "The client ID that the WASM client will used to connect to the Entra ID to perform application authentication"
+        required: true
+        type: string
+      ENTRAID_CLIENT_ID_API:
+        description: "The client ID that the APIs will used to connect to the Entra ID to perform application authentication"
         required: true
         type: string
           
@@ -45,9 +57,6 @@ on:
         required: true
       AZURE_CLIENT_ID:
         description: "The Azure client ID to use for authentication to Azure for deployment"
-        required: true
-      ENTRAID_CLIENT_SECRET:
-        description: "The client secret to use to connect to the Entra ID to perform application authentication"
         required: true
   
 jobs:
@@ -85,6 +94,8 @@ jobs:
             buildVersion=${{ inputs.BUILD_VERSION }}
             entraIdIssuerUrl=${{ inputs.ENTRAID_ISSUER_URL }}
             entraIdTenantId=${{ inputs.AZUREAD_TENANT_ID }}
-            entraIdClientId=${{ inputs.AZUREAD_CLIENT_ID }}
-            entraIdClientSecret=${{ secrets.AZUREAD_CLIENT_SECRET }}
+            entraIdTenantDomain=${{ inputs.AZUREAD_DOMAIN }}
+            entraIdClientIdApp=${{ inputs.AZUREAD_CLIENT_ID_APP }}
+            entraIdClientIdClient=${{ inputs.AZUREAD_CLIENT_ID_CLIENT }}
+            entraIdClientIdApi=${{ inputs.AZUREAD_CLIENT_ID_API }}
           additionalArguments: --what-if
