--- a/src/GMCopilot/GMCopilot/GMCopilot.Client/wwwroot/appsettings.json
+++ b/src/GMCopilot/GMCopilot/GMCopilot.Client/wwwroot/appsettings.json
@@ -1,8 +1,13 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "EntraId": {
+        "Authority": "https://gmcopilot.ciamlogin.com/3295fd92-9af0-4722-9b7f-f93917b49b9a",
+        "ClientId": "0b27d73e-4428-49b0-b1f9-a4058a7203eb",
+        "ValidateAuthority": true
     }
-  }
 }
