--- a/.github/workflows/validate-application-infrastructure.yml
+++ b/.github/workflows/validate-application-infrastructure.yml
@@ -93,9 +93,9 @@ jobs:
             baseResourceNameShared=${{ inputs.BASE_RESOURCE_NAME_SHARED }}
             buildVersion=${{ inputs.BUILD_VERSION }}
             entraIdIssuerUrl=${{ inputs.ENTRAID_ISSUER_URL }}
-            entraIdTenantId=${{ inputs.AZUREAD_TENANT_ID }}
-            entraIdTenantDomain=${{ inputs.AZUREAD_DOMAIN }}
-            entraIdClientIdApp=${{ inputs.AZUREAD_CLIENT_ID_APP }}
-            entraIdClientIdClient=${{ inputs.AZUREAD_CLIENT_ID_CLIENT }}
-            entraIdClientIdApi=${{ inputs.AZUREAD_CLIENT_ID_API }}
+            entraIdTenantId=${{ inputs.ENTRAID_TENANT_ID }}
+            entraIdDomain=${{ inputs.ENTRAID_DOMAIN }}
+            entraIdClientIdApp=${{ inputs.ENTRAID_CLIENT_ID_APP }}
+            entraIdClientIdClient=${{ inputs.ENTRAID_CLIENT_ID_CLIENT }}
+            entraIdClientIdApi=${{ inputs.ENTRAID_CLIENT_ID_API }}
           additionalArguments: --what-if
